--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^10.0.0"
+    "@types/uuid": "^10.0.0",
+    "jest": "^29.7.0"
   }
 }
